--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,9 @@ dependencies = [
     "langchain-community>=0.3.27",
     "sqlalchemy>=2.0.41",
     "requests>=2.31.0",
-    "pymysql>=1.1.0"
+    "pymysql>=1.1.0",
+    "fastapi>=0.116.1",
+    "uvicorn>=0.35.0",
 ]
 
 [project.optional-dependencies]
